<resources>
    <string name="app_name">Smurfs</string>
    <string name="app_first_name">广理小助手 beta ui</string>
    <string name="campus_information">校园资讯</string>
    <string name="search_books">检索图书</string>
    <string name="lost_and_found">失物招领</string>
    <string name="bus_22_traffic">22路车况</string>
    <string name="score_query">成绩查询</string>
    <string name="white_localization">小白定位</string>
    <string name="dormitory_electricity">宿舍电量</string>
    <string name="public_repair">公物保修</string>
    <string name="time_table">作息时间</string>
    <string name="class_schedule">班课程表</string>
    <string name="calendar">校历</string>
    <string name="customer_service">客服</string>
    <string name="course_entrance">选课入口</string>
    <string name="home">首页</string>
    <string name="alumni_circle">校友圈</string>
    <string name="mutual_platform">互助平台</string>
    <string name="me">我的</string>
    <string name="more">更多</string>
    <string name="release">发布</string>
    <string name="my_information">我的资料</string>
    <string name="my_news">我的消息</string>
    <string name="preference_setting">偏好设置</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="log_out">退出登录</string>
    <string name="like">赞</string>
    <string name="cancel">取消</string>
    <string name="comment">评论</string>
    <string name="written_yet">你还没写好内容呢!</string>
    <string name="logged_yet">你还没登录呢!</string>
    <string name="copy_to_clipboard">复制到剪贴板</string>
    <string name="delete_success">删除成功</string>
    <string name="reply">回复</string>
    <string name="reply_own">不能回复自己哦!</string>
    <string name="send">发送</string>
    <string name="copy">复制</string>
    <string name="failed_to_upload">上传图片失败，重试…</string>
    <string name="delete">删除</string>
    <string name="account_login">登录账号</string>
    <string name="student_cell_phone_number">学号、手机号</string>
    <string name="password_ed">密码（教务系统）</string>
    <string name="verification_code">验证码</string>
    <string name="sign_in">登 录</string>
    <string name="registered_account">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="exit_the_current_account">确定退出当前账号吗？</string>
    <string name="determine">确定</string>
    <string name="click_login">点击登录</string>
    <string name="wrong_point">点错了</string>
    <string name="exiting_current_account">已退出当前账号</string>
    <string name="exiting_current_account_fail">退出当前账号失败!</string>
    <string name="exit_msg">再按一次，退出应用</string>
    <string name="polytechnic_student">广理小学生</string>
    <string name="no_more">没有更多</string>
    <string name="click_load">点击加载</string>
    <string name="hard_loading">努力加载中…</string>
    <string name="load_fail_click">加载失败，点击重新加载</string>
    <string name="text">文字</string>
    <string name="camera">拍摄</string>
    <string name="photos">相册</string>
    <string name="location_failed">定位失败</string>
    <string name="please_wait">请等候…</string>
    <string name="send_success">发送成功</string>
    <string name="upload_picture">上传图片</string>
    <string name="want_to_delete">确定删除？</string>
    <string name="being_positioned">正在定位…</string>
    <string name="you_have">你有</string>
    <string name="click_left_corner">条新消息,点击左上角查看详情</string>
    <string name="hall">大厅</string>
    <string name="editorial_content">编辑内容</string>
    <string name="the_idea_of_this_moment">这一刻的想法</string>
    <string name="get_location">获取位置</string>
</resources>
