<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeef0"
    android:orientation="vertical">

    <LinearLayout
        android:background="#69f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/editorial_content"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/t_chance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/cancel"
                android:textColor="#fff"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/t_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/send"
                android:textColor="#fff"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/content"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="16sp"
        android:hint="@string/the_idea_of_this_moment"
        android:gravity="top"
        android:lines="6"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:overScrollMode="never" />

    <LinearLayout
        android:orientation="horizontal"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="1px">
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e6e6e6"
            android:orientation="horizontal" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/l_lin"
        android:background="@drawable/two_customer_selector"
        android:padding="12dp"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/lbs" />

        <TextView
            android:id="@+id/t_location"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/get_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e6e6e6"
        android:orientation="horizontal" />

</LinearLayout>