<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeef0"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#69f"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/me"
                android:textColor="#fff"
                android:textSize="16sp" />

        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeef0"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <com.flaviofaria.kenburnsview.KenBurnsView
                    android:id="@+id/kenview"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/three_customer_selector"
                    android:clickable="true"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:paddingBottom="25dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="25dp">

                    <ImageView
                        android:id="@+id/roundImageView"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nickname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/grade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:textColor="#666"
                            android:textSize="12sp" />
                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/two_customer_selector"
                    android:clickable="true"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/f_user"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/my_information"
                        android:textColor="#222"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#ddd" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/two_customer_selector"
                    android:clickable="true"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/f_remind"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/my_news"
                        android:textColor="#222"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/two_customer_selector"
                    android:clickable="true"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/f_edit"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/preference_setting"
                        android:textColor="#222"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#ddd" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/two_customer_selector"
                    android:clickable="true"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/f_mess"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/feedback"
                        android:textColor="#222"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#fff">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#ddd" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/two_customer_selector"
                    android:clickable="true"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/f_about"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/about_us"
                        android:textColor="#222"
                        android:textSize="15sp" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:id="@+id/switchx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/two_customer_selector"
                    android:clickable="true"
                    android:gravity="center|left"
                    android:orientation="horizontal"
                    android:paddingBottom="12dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="12dp">

                    <ImageView
                        android:id="@+id/f_switch_s"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/log_out"
                        android:textColor="#222"
                        android:textSize="15sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="68dp">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>